# test-package-installation

./: .env.example  .gitignore  copy_tests.py  pyproject.toml  readme.md  run_tests.py  run_tests_uv.py
.github/workflows/: tests.yml
python_environment/: noxfile.py  pyproject.toml
